[gd_scene load_steps=20 format=2]

[ext_resource path="res://ball.png" type="Texture" id=1]
[ext_resource path="res://board.png" type="Texture" id=2]
[ext_resource path="res://Ball.gd" type="Script" id=3]
[ext_resource path="res://Paddle.tscn" type="PackedScene" id=4]
[ext_resource path="res://Jumbotron.gd" type="Script" id=5]
[ext_resource path="res://pong.gd" type="Script" id=6]
[ext_resource path="res://RoundTimer.gd" type="Script" id=7]
[ext_resource path="res://Pong Font.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://audio/paddle.mp3" type="AudioStream" id=9]
[ext_resource path="res://audio/wall.mp3" type="AudioStream" id=10]
[ext_resource path="res://audio/goal.mp3" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.25, 54.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 324.25, 6 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=10]
size = 64
font_data = ExtResource( 8 )

[sub_resource type="CircleShape2D" id=5]
radius = 17.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 5, 145 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 7, 146.5 )

[node name="Pong" type="Node2D"]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 319, 241 )
texture = ExtResource( 2 )

[node name="Arena" type="StaticBody2D" parent="."]

[node name="TopLeft" type="CollisionShape2D" parent="Arena"]
position = Vector2( 1, 53 )
shape = SubResource( 2 )

[node name="Top" type="CollisionShape2D" parent="Arena"]
position = Vector2( 319, 8 )
shape = SubResource( 3 )

[node name="TopRight" type="CollisionShape2D" parent="Arena"]
position = Vector2( 640.25, 53 )
shape = SubResource( 2 )

[node name="BottomLeft" type="CollisionShape2D" parent="Arena"]
position = Vector2( 0, 448 )
shape = SubResource( 2 )

[node name="Bottom" type="CollisionShape2D" parent="Arena"]
position = Vector2( 322, 475 )
shape = SubResource( 3 )

[node name="BottomRight" type="CollisionShape2D" parent="Arena"]
position = Vector2( 639, 448 )
shape = SubResource( 2 )

[node name="Jumbotron" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Player1Score" type="Label" parent="Jumbotron"]
margin_left = 258.0
margin_top = 29.0
margin_right = 298.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "0"

[node name="Player2Score" type="Label" parent="Jumbotron"]
margin_left = 338.0
margin_top = 29.0
margin_right = 368.0
margin_bottom = 66.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "0"

[node name="CountDown" type="Label" parent="Jumbotron"]
visible = false
margin_left = 299.0
margin_top = 105.0
margin_right = 339.0
margin_bottom = 195.0
custom_colors/font_color = Color( 0.556863, 0.0235294, 0.0235294, 1 )
custom_fonts/font = SubResource( 10 )

[node name="Ball" type="KinematicBody2D" parent="."]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Ball"]
position = Vector2( 323, 228 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
position = Vector2( 323, 228 )
shape = SubResource( 5 )

[node name="HitPaddle" type="AudioStreamPlayer" parent="Ball"]
stream = ExtResource( 9 )

[node name="HitWall" type="AudioStreamPlayer" parent="Ball"]
stream = ExtResource( 10 )

[node name="LeftPaddle" parent="." instance=ExtResource( 4 )]
position = Vector2( -439, -400 )

[node name="RightPaddle" parent="." instance=ExtResource( 4 )]
position = Vector2( 115, -400 )

[node name="LeftGoal" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftGoal"]
position = Vector2( -4, 251 )
shape = SubResource( 6 )

[node name="RightGoal" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightGoal"]
position = Vector2( 643, 250.5 )
shape = SubResource( 7 )

[node name="RoundTimer" type="Timer" parent="."]
script = ExtResource( 7 )

[node name="Goal" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[connection signal="goal_scored" from="." to="." method="_on_goal_scored"]
[connection signal="goal_scored" from="." to="Ball" method="_on_goal_scored"]
[connection signal="goal_scored" from="." to="RoundTimer" method="_on_goal_scored"]
[connection signal="new_round_needed" from="." to="Jumbotron" method="_on_Pong_new_round_needed"]
[connection signal="ball_dropped" from="Jumbotron" to="Ball" method="_on_ball_dropped"]
[connection signal="ball_dropped" from="Jumbotron" to="LeftPaddle" method="_on_ball_dropped"]
[connection signal="ball_dropped" from="Jumbotron" to="RightPaddle" method="_on_ball_dropped"]
[connection signal="ball_dropped" from="Jumbotron" to="RoundTimer" method="_on_ball_dropped"]
[connection signal="body_entered" from="LeftGoal" to="." method="_on_LeftGoal_body_entered"]
[connection signal="body_entered" from="RightGoal" to="." method="_on_RightGoal_body_entered"]
[connection signal="timeout" from="RoundTimer" to="Ball" method="_on_RoundTimer_timeout"]
[connection signal="timeout" from="RoundTimer" to="LeftPaddle" method="_on_RoundTimer_timeout"]
[connection signal="timeout" from="RoundTimer" to="RightPaddle" method="_on_RoundTimer_timeout"]
